# ldmat

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  block_size.ipynb  h5.py  hyperparameters.csv  hyperparameters.ipynb  main.py  pyproject.toml  requirements.txt  setup.py  true_indexing.ipynb
.github/workflows/: python-package.yml
examples/: chr0_30000001_33000001.npz  chr21_partial.h5  query_result.csv  query_result.npz  query_result_maf.npz
notebooks/: Untitled.ipynb  block_size.ipynb  hyperparameters.ipynb  matrix_sizes.ipynb  scratch.ipynb  triangular.ipynb
src/ldmat/: __init__.py  __main__.py  h5.py  run.sh
tests/: query.py  query_test.py
