[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
	"/data",
	"/graphics",
	"/notebooks",
	"/venv",
]

[project]
name = "ldmat"
version = "0.0.7"
authors = [
  { name="Rockwell Weiner", email="rockwellw@gmail.com" },
]
description = "Efficient Storage and Querying of Linkage Disequilibrium Matrices"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.3",
    "h5py>=3.7.0",
    "matplotlib>=3.4.3",
    "numpy>=1.21.3",
    "pandas>=1.3.4",
    "scipy>=1.8.1",
    "seaborn>=0.11.2",
]

[project.urls]
"Homepage" = "https://github.com/rockwellw/ld"

[project.scripts]
ldmat = "ldmat:run_cli"